--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
   background-color: #f0f7ff;
   color: #333;
 }
