--- a/src/App.css
+++ b/src/App.css
@@ -1255,4 +1255,22 @@ button {
   top: 50%;
   transform: translateY(-50%);
 }
+.progress-bar-container {
+  width: 100%;
+  background: #eee;
+  border-radius: 5px;
+  margin-top: 5px;
+  height: 20px;
+  overflow: hidden;
+}
+
+.progress-bar {
+  height: 100%;
+  background-color: #7E6EF9;
+  color: white;
+  text-align: center;
+  line-height: 20px;
+  transition: width 0.2s ease;
+}
+
 
