--- a/src/App.css
+++ b/src/App.css
@@ -1176,7 +1176,9 @@ button {
   .login-header h1 {
     font-size: 2rem;
   }
-  
+  .app-header h1 {
+    font-size: 20px;
+  }
   .score-circle {
     width: 120px;
     height: 120px;
