--- a/src/App.css
+++ b/src/App.css
@@ -1177,7 +1177,7 @@ button {
     font-size: 2rem;
   }
   .app-header h1 {
-    font-size: 20px;
+    font-size: 20px !important ;
   }
   .score-circle {
     width: 120px;
