--- a/src/App.css
+++ b/src/App.css
@@ -1340,7 +1340,7 @@ button {
 }
 
 .swal2-styled.swal2-confirm {
-  background-color: #ef4444;
+  /* background-color: #ef4444; */
   border-radius: 8px;
   padding: 0.75rem 2rem;
   font-weight: 600;
@@ -1348,7 +1348,7 @@ button {
 }
 
 .swal2-styled.swal2-confirm:hover {
-  background-color: #dc2626;
+  /* background-color: #dc2626; */
   transform: translateY(-2px);
 }
 
